--- a/package.json
+++ b/package.json
@@ -71,16 +71,16 @@
     "zod": "^3.24.2",
     "prisma": "^6.5.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "tsx": "^4.19.3",
-    "typescript": "^5"
+    "tsx": "^4.19.3"
   }
 }
