--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,6 +58,8 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "openai": "^4.87.3",
+    "postcss": "^8",
+    "prisma": "^6.5.0",
     "react": "^18",
     "react-css-spinners": "^4.0.2",
     "react-day-picker": "^8.10.1",
@@ -65,20 +69,16 @@
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
     "uploadthing": "^7.5.2",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
-    "prisma": "^6.5.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
+    "@types/nodemailer": "^6.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "tsx": "^4.19.3"
